--- a/OmOss.html
+++ b/OmOss.html
@@ -36,7 +36,7 @@
            <div class="item3"> 
           <p>Vi är en grupp som består av biologer, specialist i hållbar entreprenörskap, ingenjör, läkare, studenter med mera. Vi brinner för omställningsfrågor, klimatfrågor och resiliens. Vi är framför allt en grupp visionära medborgare som bor och arbetar i Valleområdet.
           </p>
-          <a class="btnInPage" href="mailto:annakarin.berglund@yahoo.se?subject=Kontakt%20från%20webben%20Gemensamhetsskogen">Kontakta oss</a>
+          <a class="btnInPage" href="mailto:gemensamhetsskogen@gmail.com?subject=Kontakt%20från%20webben%20Gemensamhetsskogen">Kontakta oss</a>
         </div>
       
         <div class="item4">
