--- a/pasteHeader.html
+++ b/pasteHeader.html
@@ -35,7 +35,7 @@
         <div id="myDIV">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           
-        <ul  id="listan" class="sidenav">
+        <ul  id="listan" class="sidenav nav_links">
                         <li>        
                           <div class="dropdown" >
                                 <span class="dropdown-btn">Om Initiativet  <i class="fa fa-caret-down"></i></span>
