--- a/NpH.html
+++ b/NpH.html
@@ -2,50 +2,66 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="stylesheet.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="stylesheet.css">
 
+<script src="script.js"></script>
+<style>
+  
+</style>
 </head>
 <body>
-<my-header></my-header>
 
-<div class="sidenav">
-    <span class="dropdown-btn">Om Initiativet 
-        <i class="fa fa-caret-down"></i>
+<div class="topnav" id="myTopnav">
+  <a id="logo" href="#home" class="active"><h1>Gemensamhetsskogen
+<br>Billingen</h1></a>
+<div class="menu">
+    <div class="dropdown">
+    <span class="dropbtn">Om Initiativet 
+      <i class="fa fa-caret-down"></i>
     </span>
-  <div class="dropdown-container">
-    <a href="aktuellt.html"  >aktuellt </a>
-    <a href="iMedia.html"  >i media</a>
-    <a href="">nästa steg</a>
-    <a href="QA.html"  >Frågor & svar</a>
-  </div>
-  <span class="dropdown-btn">Fakta 
-    <i class="fa fa-caret-down"></i>
-  </span>
-    <div class="dropdown-container">
-    <a href="FaktaStyrdokument.html">Styrdokument</a>
-    <a href="FaktaLknProjekt.html"> linkande projekt</a>
-    <a href="#">plantageskog</a>
-    <a href="kontinuitetsskog.html">kontinuitetsskog</a>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
     </div>
-  <span class="dropdown-btn">Om Oss 
-    <i class="fa fa-caret-down"></i>
-  </span>
-     <div class="dropdown-container">
-    <a href="OmOss.html">Vem är vi</a>
-    <a href="#">På sociala media</a>
-     </div>
-  <a href="index.html">Hem</a>
+  </div> 
+   <div class="dropdown">
+    <span class="dropbtn">Fakta 
+      <i class="fa fa-caret-down"></i>
+    </span>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div> 
+  <div class="dropdown">
+    <span class="dropbtn">Om Oss 
+      <i class="fa fa-caret-down"></i>
+    </span>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div> 
+    <a class="dropdown" href="index.html"> 
+      <i class="fa fa-home" href="index.html"></i></a>> 
 </div>
 
-<div class="main">
-  <h2>Sidebar Dropdown</h2>
-  <p>Click on the dropdown button to open the dropdown menu inside the side navigation.</p>
-  <p>This sidebar is of full height (100%) and always shown.</p>
-  <p>Some random text..</p>
+  <a href="javascript:void(0);" style="font-size:40px; color: green;" 
+  class="icon" onclick="myFunction()">&#9776;</a>
 </div>
-<link rel="stylesheet" href="stylesheet.css">
-<script src="script1.js"></script>
+<a  class="till" href="https://bit.ly/Billingen"> <button> till namninsamling</button></a>
+
+<div style="padding-left:16px">
+  <h2>Responsive Topnav with Dropdown</h2>
+  <p>Resize the browser window to see how it works.</p>
+  <p>Hover over the dropdown button to open the dropdown menu.</p>
+</div>
+
+
 
 </body>
-</html> 
+</html>
