--- a/NpH.html
+++ b/NpH.html
@@ -3,37 +3,211 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="stylesheet.css">
+<style> 
+body {margin:0;font-family:Arial;
+color:#656565;}
+*{
+  text-decoration: none;
+}
 
-<script src="script.js"></script>
-<style>
+.topnav {
+  overflow: hidden;
+  background-color:white;
+  display: flex;
+  justify-content: flex-end;
+  text-decoration: none;
   
-</style>
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color:656565;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+  margin: 0;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 17px;    
+  border: none;
+  outline: none;
+  color: #656565;
+  padding: 0px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.logo{
+   cursor: pointer;
+  font-weight: 800;
+  font-family: Poppins;
+  margin-right: auto;
+  z-index: -2;
+  width: 50%;
+}
+a:visited{
+  color:#656565;
+}
+
+.till{
+  background-color: green;
+  cursor: pointer;
+  color: white;
+  border: 2px solid green;
+  padding: 5px 15px;
+  text-align: center;
+  text-decoration: none;
+  border-radius:70px;
+  font-weight: 500;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: absolute;
+  top:5px;
+  right:0;
+  z-index: -1;
+}
+a.till{
+  color:white;
+}
+
+.till a:visited{
+  color:white;
+}
+
+button{background-color: green;
+  cursor: pointer;
+  color: white;
+  border: 2px solid green;
+  padding: 5px 15px;
+  text-align: center;
+  text-decoration: none;
+  border-radius:70px;
+  font-weight: 500;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+    color: green;
+    
+  }
+}
+
+
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+
+
+}
+</style> 
+
+
+    <script src="script.js"></script>
 </head>
 <body>
 
-<div class="topnav" id="myTopnav">
-  <a id="logo" href="#home" class="active"><h1>Gemensamhetsskogen
-<br>Billingen</h1></a>
-<div class="menu">
+<header>
+<div class="logo"><h1><a href="index.html" class=" logo">Gemensamhetsskog <br> Billingen</a></h1></div>
+<div class="till"><a   href="https://bit.ly/Billingen"> till namninsamling</a></div>
+  <div class="topnav" id="myTopnav">
+  
+    <div class="dropdown">
+      <span class="dropbtn"> 
+        <i class="fa fa-home"></i>
+      </span>
+    
+    </div> 
     <div class="dropdown">
     <span class="dropbtn">Om Initiativet 
       <i class="fa fa-caret-down"></i>
     </span>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="aktuellt.html"  >aktuellt </a>
+      <a href="iMedia.html"  >i media</a>
+      <a href="">nästa steg</a>
+      <a href="QA.html"  >Frågor & svar</a>
     </div>
   </div> 
-   <div class="dropdown">
+  <div class="dropdown">
     <span class="dropbtn">Fakta 
       <i class="fa fa-caret-down"></i>
     </span>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="FaktaStyrdokument.html">Styrdokument</a>
+      <a href="FaktaLknProjekt.html"> linkande projekt</a>
+      <a href="#">plantageskog</a>
+      <a href="kontinuitetsskog.html">kontinuitetsskog</a>
     </div>
   </div> 
   <div class="dropdown">
@@ -41,19 +215,13 @@
       <i class="fa fa-caret-down"></i>
     </span>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="OmOss.html">Vem är vi</a>
+      <a href="#">På sociala media</a>
     </div>
   </div> 
-    <a class="dropdown" href="index.html"> 
-      <i class="fa fa-home" href="index.html"></i></a>> 
+  <a href="javascript:void(0);" style="font-size:26px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
-
-  <a href="javascript:void(0);" style="font-size:40px; color: green;" 
-  class="icon" onclick="myFunction()">&#9776;</a>
-</div>
-<a  class="till" href="https://bit.ly/Billingen"> <button> till namninsamling</button></a>
+</header>
 
 <div style="padding-left:16px">
   <h2>Responsive Topnav with Dropdown</h2>
@@ -61,7 +229,16 @@
   <p>Hover over the dropdown button to open the dropdown menu.</p>
 </div>
 
-
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
 
 </body>
 </html>
