--- a/QA.html
+++ b/QA.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- makes content available in several devices.-->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <title>Gemensamhetsskog</title>
+  <title>Frågor & Svar > Gemensamhetsskog</title>
   <meta name="description" content="Figma htmlGenerator">
   <meta name="author" content="htmlGenerator">
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
