--- a/NpH.html
+++ b/NpH.html
@@ -74,8 +74,8 @@ color:#656565;}
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
+  background-color:rgba(0, 128, 0, 0.164);
+  color: green;
 }
 
 .dropdown-content a:hover {
@@ -142,7 +142,7 @@ button{background-color: green;
     float: right;
     display: block;
     color: green;
-    
+     
   }
 }
 
@@ -193,6 +193,7 @@ button{background-color: green;
       <i class="fa fa-caret-down"></i>
     </span>
     <div class="dropdown-content">
+      <a href="initiativ.html">Initiativet</a>
       <a href="aktuellt.html"  >aktuellt </a>
       <a href="iMedia.html"  >i media</a>
       <a href="">nästa steg</a>
