--- a/OmOss.html
+++ b/OmOss.html
@@ -59,6 +59,83 @@
               
          </div>
 
+         <div class="Rubrik">
+           <h2>Vi som startade <span class="fokusHeader">uppropet</span> </h2>
+         </div>
+         <div >
+
+          <table>
+            <tr>
+              <td>Anna-Karin Berglund</td>
+            </tr>
+            <tr>
+              <td>
+                Karin Rystedt
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Kaj Moberg
+              </td>
+            </tr>
+            <tr>
+             <td>Karin Welin</td> 
+            </tr>
+            <tr>
+              <td>
+                Peter Holm
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Tomas Larsson
+              </td>
+            </tr>
+            <tr>
+              Eleonor Björnfot
+            </tr>
+            <tr>
+              <td>
+                Emma Hurri
+              </td>
+             </tr>
+             <tr>
+             <td>
+               Konstantin Kossarelos
+              </td>
+             </tr>
+             <tr>
+               <td>
+                Charlotta Andersson
+               </td>
+             </tr>
+             <tr>
+              <td>
+                Anders Bergström
+              </td> 
+            </tr>
+            <tr>
+               <td>
+                Sofia Hultman
+               </td>
+            </tr>
+             <tr>
+               <td>
+                Sonia Lindblom
+               </td>
+               <td>
+                <a href="https://m.facebook.com/profile.php?id=100000128115147"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+               </td>
+               <td>
+                 <a href="https://www.linkedin.com/in/sonia-lindblom-20010624/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+               </td>
+             </tr>
+
+
+          </table>
+        </div>
+         
+
         <div id="fb-page" class="rubrik">
           <h2>Vi finns också på <spanclass="fokusHeader">facebook</span> </h2>
           <p>
@@ -68,6 +145,7 @@
         <div>
         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FGemensamhetsskogen-100424565724679%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </div>
+
         </div>
 <br>
 <!-- <div id="fb-page" class="fb-page" data-href="https://www.facebook.com/Gemensamhetsskogen-100424565724679/" data-tabs="timeline" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/Gemensamhetsskogen-100424565724679/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Gemensamhetsskogen-100424565724679/">Gemensamhetsskogen</a></blockquote></div>
