--- a/NpH.html
+++ b/NpH.html
@@ -200,9 +200,9 @@ button{background-color: green;
   <div class="topnav" id="myTopnav">
   
     <div class="dropdown">
-      <span class="dropbtn"> 
+      <a class="dropbtn" href="index.html"> 
         <i class="fa fa-home"></i>
-      </span>
+      </a>
     
     </div> 
     <div class="dropdown">
