--- a/FaktaLknProjekt.html
+++ b/FaktaLknProjekt.html
@@ -53,7 +53,7 @@
  
   <div>
     <br>
-    <a href=" https://framtidensnatur.se/vara-projekt/">Framtidsnatur</a>
+    <a href=" https://framtidensnatur.se/vara-projekt/">Framtidsnatur <i class="fa fa-external-link" aria-hidden="true"></i></a>
   </div>
 
    <div>
@@ -63,18 +63,18 @@
  
   <div>
     <br>
-    <a href="https://naturarvet.se/">Naturarvet </a>
+    <a href="https://naturarvet.se/">Naturarvet <i class="fa fa-external-link" aria-hidden="true"></i> </a>
   </div>
 
   <div>
-    <h3>Liknande projekt Utomlands</h3>
+    <h3>Liknande projekt Utomlands </h3>
   </div>
   <div></div>
  <div class="item1"><b> woods association i Skottland:</b> <br>
   finns goda exempel på gemensamhetsskogar till glädje och nytta för unga och gamla och en mångfald intressen. Vi tror att många människor runt Billingen skulle vilja se detta hända!.
   
 </div>
-<div class="item8"> <a href="https://www.communitywoods.org/">Community woods association</a></div>
+<div class="item8"> <a href="https://www.communitywoods.org/">Community woods association <i class="fa fa-external-link" aria-hidden="true"></i></a></div>
 
 </div>
 
