--- a/FaktaStyrdokument.html
+++ b/FaktaStyrdokument.html
@@ -51,12 +51,12 @@
      En kartläggning av kontinuitetsskog från 2017</div>
  
   <div class="item4">
-    <a href="https://www.skogsstyrelsen.se/globalassets/aga-skog/skydda-skog/bilaga-3-kartering_av_kontinuitetsskog_boreal_region.pdf">Kartering av kontinuitetsskog i boreal region</a>
+    <a href="https://www.skogsstyrelsen.se/globalassets/aga-skog/skydda-skog/bilaga-3-kartering_av_kontinuitetsskog_boreal_region.pdf">Kartering av kontinuitetsskog i boreal region  <i class="fa fa-external-link" aria-hidden="true"></i></a>
   </div>
   <div class="item5">
     Gällande regler kring Skogsvård, från april 2020
   </div>
-  <div class="item1"><a href="https://www.skogsstyrelsen.se/globalassets/lag-och-tillsyn/skogsvardslagen/skogsvardslagstiftningen_2020_1_april.pdf">Skogsvårdslagstiftningen </a>
+  <div class="item1"><a href="https://www.skogsstyrelsen.se/globalassets/lag-och-tillsyn/skogsvardslagen/skogsvardslagstiftningen_2020_1_april.pdf">Skogsvårdslagstiftningen <i class="fa fa-external-link" aria-hidden="true"></i></a>
   
   
 </div>
@@ -71,7 +71,7 @@
   Särskilt kap. 46.
 </div>
 <div class="item1"><a href="https://www.svenskakyrkan.se/kyrkoordningen
-  ">Kyrkoordningen </a>
+  ">Kyrkoordningen <i class="fa fa-external-link" aria-hidden="true"></i></a>
 </div>
 <div>
   <b> Prästlönetillgångarna 2019</b> <br>
@@ -79,14 +79,14 @@
 
 </div>
 <div>
- <a href="https://www.svenskakyrkan.se/filer/1708814/Pr%C3%A4stl%C3%B6netillg%C3%A5ngarna%202019.pdf?fbclid=IwAR1ErOmMtf47gyebHKbsOvUy3r1IEShF31_sh5EI6NVZiXKaK2d_Ufdl_Tc">Prästlönetillgångarna</a> 
+ <a href="https://www.svenskakyrkan.se/filer/1708814/Pr%C3%A4stl%C3%B6netillg%C3%A5ngarna%202019.pdf?fbclid=IwAR1ErOmMtf47gyebHKbsOvUy3r1IEShF31_sh5EI6NVZiXKaK2d_Ufdl_Tc">Prästlönetillgångarna <i class="fa fa-external-link" aria-hidden="true"></i></a> 
 </div>
 <div>
   <b> Svenska kyrkans färdplan för klimatet </b><br>
   Svenska kyrkan ska vara klimatneutral senast år 2030, det vill säga inte lämna något nettobidrag till den globala uppvärmningen. Målet ska till största delen nås genom utsläppsminskningar inom vår egen verksamhet. Detta är till exempel produktion av effektiv energianvändning, produktion av förnybar el och fossilfria tjänsteresor.
 </div>
 <div>
-  <a href="https://www.svenskakyrkan.se/agenda2030/svenska-kyrkans-fardplan-for-klimatet-?fbclid=IwAR1F4vOczqKXi0zh0aJWECd_KugAnB-C8Kz2LKuXMqC01GqfI7YQpaQCuFI">Färdplan för klimatet</a>
+  <a href="https://www.svenskakyrkan.se/agenda2030/svenska-kyrkans-fardplan-for-klimatet-?fbclid=IwAR1F4vOczqKXi0zh0aJWECd_KugAnB-C8Kz2LKuXMqC01GqfI7YQpaQCuFI">Färdplan för klimatet <i class="fa fa-external-link" aria-hidden="true"></i></a>
   
 </div>
 <div>
@@ -98,7 +98,7 @@ Alla dessa tillgångar utgör en stiftelseliknande egendom som äger sig själv 
 </div>
 
 <div>
-  <a href="https://www.svenskakyrkan.se/skarastift/jord-skog-och-fonder?fbclid=IwAR1OGU_wOOfER7c8-pTWvuOQv3xph7u4_GELfwgD8IsMN-lYYD1Lks4UX_M">Skog, jord och finansiella placeringar</a>
+  <a href="https://www.svenskakyrkan.se/skarastift/jord-skog-och-fonder?fbclid=IwAR1OGU_wOOfER7c8-pTWvuOQv3xph7u4_GELfwgD8IsMN-lYYD1Lks4UX_M">Skog, jord och finansiella placeringar <i class="fa fa-external-link" aria-hidden="true"></i></a>
 </div>
 
 </div>
