--- a/NpH.html
+++ b/NpH.html
@@ -125,6 +125,8 @@ a.till{
   color:white;
 }
 
+
+
 button{background-color: green;
   cursor: pointer;
   color: white;
@@ -168,6 +170,8 @@ button{background-color: green;
     right: 0;
     top: 0;
   }
+  .logo{display: none;}
+  .logoSm {display: flex;}
 
   .fa-caret-down{
     display: none;
@@ -196,6 +200,7 @@ button{background-color: green;
 
 <header>
 <div class="logo"><h1><a href="index.html" class=" logo">Gemensamhetsskog <br> Billingen</a></h1></div>
+<div class="logoSm"><h1><a href="index.html" class=" logo">Gemensam- <br>  hetsskog <br> Billingen</a></h1></div>
 <div class="till"><a   href="https://bit.ly/Billingen"> till namninsamling</a></div>
   <div class="topnav" id="myTopnav">
   
