--- a/FaktaStyrdokument.html
+++ b/FaktaStyrdokument.html
@@ -112,5 +112,10 @@ Alla dessa tillgångar utgör en stiftelseliknande egendom som äger sig själv 
   <script>
     includeHTML();
   </script>
+
+
+<footer>
+  <my-footer></my-footer>
+</footer>
   </body>
             </html>
