--- a/aktuellt.html
+++ b/aktuellt.html
@@ -47,9 +47,21 @@
     <div class="item4">
       <img src="images" alt="">
     </div>
-    <div id="zoomMeeting>" class="item5"><h3>Zoom möte 26 augusti</h3></div>
+    <div id="zoomMeeting>" class="item5"><h3>Zoommöte 26 augusti</h3></div>
     <div class="item6"></div>
     <div class="item7">Ikväll var vi 4 personer som spånade möjligheter och nästa steg. Två av oss kommer att börja planera för en studiecirkel, vi önskar bjuda in till ett kunskapsseminarium där vi bjuder in aktiva som jobbar med community forests i Skottland, kanske även England och Canada för att via zoom få lyssna och lära av deras erfarenheter. Vi pratade även om att genomföra ett möte dör vi träffar andra aktiva skogsgrupper och nätverk, inom och utanför kyrkan runt om i Sverige.</div>
+    <div class="emp"></div>
+    <div class="rubrik">
+      <h2> <span >"Strategimöte"</span> den 7 september </h2>
+    </div>
+    <div class="empty"></div>
+    <div>
+      <p>På mötet bestämde vi att på måndag den 13 september överlämna vår namninsamling till stiftet, där vi fn har 238 personer som skrivit under på att de vill vara med och bilda en gemensamhetsskog. Häftigt tycker vi! Den som vill bidra till att det blir en push och fler namnunderskrifter före överlämnandet kan bidra med en liten summa via swisch. Sonia återkommer om detta. Jag, Karin och Sonia ska överlämna och vi undersöker vem som ska ta emot namninsamlingen och om vi kan få uppmärksamhet kring överlämnandet. </p>
+      
+      <p> Vi har bestämt att genomföra en studiecirkel i höst med trolig start i oktober. Det arbetet drivs av Sofia Hultman och Eleonor.  Anna-Karin, Sofia H och Eleonor kommer även att börja rigga för ett öppet möte, tillsammans m SNF nu i höst, med inbjudna föreläsare från Canada och Skottland. Det vore häftigt att bjuda in olika organisationer och aktiva till ett sådant möte för att bredda engagemanget. 
+        
+      </p> <p> Hemsidan är snart klar. Vi diskuterade vår rubrik och namn på hemsidan - om vi ska heta "Gemensamhetsskogen Billingen" eller "Gemensamhetsskogen Skaraborg" </p>
+    </div>
    
   
 </div>
@@ -58,7 +70,9 @@
   
 
   
-
+<script>
+  showSlides(slideIndex);
+</script>
 
   </body>
 
