--- a/initiativ.html
+++ b/initiativ.html
@@ -35,7 +35,9 @@
   </head>
            
    <body>
-
+    <script>
+      showSlides(slideIndex);
+    </script>
     <my-header/>
 
 
@@ -108,7 +110,7 @@
   </div>
  
 <div class="img">
-      <img  class="mySlides" src="images/svamp.JPG" alt="Svampar på ett stående död träd" width="100%">
+      <img  class="mySlides" src="images/svamp.JPG" alt="Svampar på ett stående död träd" width="100%" style="display: block;">
       <img  class="mySlides" src="images/svamparDeadTree.jpg" alt="Svampar på ett stående död träd" width="100%">
       <img  class="mySlides" src="images/svamparMarken.jpg" alt="Svampar på marken" width="100%">
       <img  class="mySlides" src="images/skogsstjärna.JPG" alt="Svampar på ett stående död träd"width="100%">
@@ -150,6 +152,7 @@
   
   <!-- </span><span  class="ei108_76_2_169">Vision</span><span  class="ei108_76_2_170">Vi har en</span></div> -->
   
- 
+
+  
   </body>
             </html>
