--- a/FaktaLknProjekt.html
+++ b/FaktaLknProjekt.html
@@ -82,6 +82,8 @@
 
   
   <!-- </span><span  class="ei108_76_2_169">Vision</span><span  class="ei108_76_2_170">Vi har en</span></div> -->
-  
+  <footer>
+    <my-footer></my-footer>
+  </footer>
   </body>
  </html>
