--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,5 @@
-<a href="http://www.google.com">click here for google</a>
+<div class="footer">
+   <p> &#169; gemensamhetsskogen.se</p>
+   <p> gemensamhetsskogen@gmail.com</p>
+ 
+</div>
