--- a/FaktaLknProjekt.html
+++ b/FaktaLknProjekt.html
@@ -14,7 +14,7 @@
     <meta name="Gemensamhetsskog Billingen" content="Frivillig organisation">
     <meta name="Webmaster" content="Sonia Lindblom">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-  
+    <link rel="icon" type="image/png" href="images/favicon.ico"/>
     <link rel="stylesheet" href="styles.css">
         
     <script src="script.js"></script>
@@ -53,7 +53,7 @@
  
   <div>
     <br>
-    <a href=" https://framtidensnatur.se/vara-projekt/">Framtidsnatur <i class="fa fa-external-link" aria-hidden="true"></i></a>
+    <a href=" https://framtidensnatur.se/vara-projekt/" target="_blank">Framtidsnatur <i class="fa fa-external-link" aria-hidden="true"></i></a>
   </div>
 
    <div>
@@ -63,7 +63,7 @@
  
   <div>
     <br>
-    <a href="https://naturarvet.se/">Naturarvet <i class="fa fa-external-link" aria-hidden="true"></i> </a>
+    <a href="https://naturarvet.se/" target="_blank">Naturarvet <i class="fa fa-external-link" aria-hidden="true"></i> </a>
   </div>
 
   <div>
@@ -74,7 +74,7 @@
   finns goda exempel på gemensamhetsskogar till glädje och nytta för unga och gamla och en mångfald intressen. Vi tror att många människor runt Billingen skulle vilja se detta hända!.
   
 </div>
-<div class="item8"> <a href="https://www.communitywoods.org/">Community woods association <i class="fa fa-external-link" aria-hidden="true"></i></a></div>
+<div class="item8"> <a href="https://www.communitywoods.org/" target="_blank" >Community woods association <i class="fa fa-external-link" aria-hidden="true"></i> </a></div>
 
 </div>
 
