--- a/FaktaStyrdokument.html
+++ b/FaktaStyrdokument.html
@@ -14,7 +14,8 @@
     <meta name="Gemensamhetsskog Billingen" content="Frivillig organisation">
     <meta name="Webmaster" content="Sonia Lindblom">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-  
+    <link rel="icon" type="image/png" href="images/favicon.ico"/>
+    <link rel="icon" type="image/png" href="images/favicon.ico"/>
     <link rel="stylesheet" href="styles.css">
         
     <script src="script.js"></script>
@@ -51,7 +52,7 @@
      En kartläggning av kontinuitetsskog från 2017</div>
  
   <div class="item4">
-    <a href="https://www.skogsstyrelsen.se/globalassets/aga-skog/skydda-skog/bilaga-3-kartering_av_kontinuitetsskog_boreal_region.pdf">Kartering av kontinuitetsskog i boreal region  <i class="fa fa-external-link" aria-hidden="true"></i></a>
+    <a href="https://www.skogsstyrelsen.se/globalassets/aga-skog/skydda-skog/bilaga-3-kartering_av_kontinuitetsskog_boreal_region.pdf" target="_blank">Kartering av kontinuitetsskog i boreal region  <i class="fa fa-external-link" aria-hidden="true"></i></a>
   </div>
   <div class="item5">
     Gällande regler kring Skogsvård, från april 2020
@@ -70,7 +71,7 @@
   Kyrkoordningen är Svenska kyrkans eget regelverk. Den förklarar vilka gemensamma regler som gäller i kyrkan och hur beslut ska fattas. Här hittar du länkar till gällande kyrkoordning och alla beslutade ändringar. <br>
   Särskilt kap. 46.
 </div>
-<div class="item1"><a href="https://www.svenskakyrkan.se/kyrkoordningen
+<div class="item1"><a  target="_blank" href="https://www.svenskakyrkan.se/kyrkoordningen
   ">Kyrkoordningen <i class="fa fa-external-link" aria-hidden="true"></i></a>
 </div>
 <div>
@@ -79,14 +80,14 @@
 
 </div>
 <div>
- <a href="https://www.svenskakyrkan.se/filer/1708814/Pr%C3%A4stl%C3%B6netillg%C3%A5ngarna%202019.pdf?fbclid=IwAR1ErOmMtf47gyebHKbsOvUy3r1IEShF31_sh5EI6NVZiXKaK2d_Ufdl_Tc">Prästlönetillgångarna <i class="fa fa-external-link" aria-hidden="true"></i></a> 
+ <a target="_blank" href="https://www.svenskakyrkan.se/filer/1708814/Pr%C3%A4stl%C3%B6netillg%C3%A5ngarna%202019.pdf?fbclid=IwAR1ErOmMtf47gyebHKbsOvUy3r1IEShF31_sh5EI6NVZiXKaK2d_Ufdl_Tc">Prästlönetillgångarna <i class="fa fa-external-link" aria-hidden="true"></i></a> 
 </div>
 <div>
   <b> Svenska kyrkans färdplan för klimatet </b><br>
   Svenska kyrkan ska vara klimatneutral senast år 2030, det vill säga inte lämna något nettobidrag till den globala uppvärmningen. Målet ska till största delen nås genom utsläppsminskningar inom vår egen verksamhet. Detta är till exempel produktion av effektiv energianvändning, produktion av förnybar el och fossilfria tjänsteresor.
 </div>
 <div>
-  <a href="https://www.svenskakyrkan.se/agenda2030/svenska-kyrkans-fardplan-for-klimatet-?fbclid=IwAR1F4vOczqKXi0zh0aJWECd_KugAnB-C8Kz2LKuXMqC01GqfI7YQpaQCuFI">Färdplan för klimatet <i class="fa fa-external-link" aria-hidden="true"></i></a>
+  <a  target="_blank" href="https://www.svenskakyrkan.se/agenda2030/svenska-kyrkans-fardplan-for-klimatet-?fbclid=IwAR1F4vOczqKXi0zh0aJWECd_KugAnB-C8Kz2LKuXMqC01GqfI7YQpaQCuFI">Färdplan för klimatet <i class="fa fa-external-link" aria-hidden="true"></i></a>
   
 </div>
 <div>
