--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Gemensamhetsskog</title>
     <meta name="Gemensamhetsskog Billingen" content="Frivillig organisation">
+    <link rel="icon" type="image/png" href="images/favicon.ico"/>
     <meta name="Webmaster" content="Sonia Lindblom">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   
