--- a/initiativ.html
+++ b/initiativ.html
@@ -31,7 +31,7 @@
         overflow: visible;
       }
       </style>
-              
+     <link rel="icon" type="image/png" href="images/favicon.ico"/>             
   </head>
            
    <body>
