--- a/OmOss.html
+++ b/OmOss.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   
     <link rel="stylesheet" href="styles.css">
-        
+    <link rel="icon" type="image/png" href="images/favicon.ico"/>    
     <script src="script.js"></script>
   
     <style>
