--- a/QA.html
+++ b/QA.html
@@ -19,7 +19,7 @@
   <meta name="description" content="Figma htmlGenerator">
   <meta name="author" content="htmlGenerator">
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-
+  <link rel="icon" type="image/png" href="images/favicon.ico"/>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js"></script>
 </head>
