--- a/granplantage.html
+++ b/granplantage.html
@@ -16,7 +16,7 @@
       <meta name="Gemensamhetsskog Billingen" content="Frivillig organisation">
       <meta name="Webmaster" content="Sonia Lindblom">
       <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    
+      <link rel="icon" type="image/png" href="images/favicon.ico"/>
       <link rel="stylesheet" href="styles.css">
           
       <script src="script.js"></script>
