--- a/iMedia.html
+++ b/iMedia.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="styles.css">
       
   <script src="script.js"></script>
-
+    <link rel="icon" type="image/png" href="images/favicon.ico"/>
   <style>
 
     .responsive-iframe {
