--- a/kontinuitetsskog.html
+++ b/kontinuitetsskog.html
@@ -10,7 +10,7 @@
   <script> 
     $(function(){ $("head").load("header.html") });
   </script>
-            
+        <link rel="icon" type="image/png" href="images/favicon.ico"/>        
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- makes content available in several devices.-->
