update with css for h1 and script for footer

--- a/FaktaLknProjekt.html
+++ b/FaktaLknProjekt.html
@@ -79,7 +79,7 @@
 </div>
 
 </div>
-
+<my-footer></my-footer>
   
   <!-- </span><span  class="ei108_76_2_169">Vision</span><span  class="ei108_76_2_170">Vi har en</span></div> -->
  
