--- a/FaktaStyrdokument.html
+++ b/FaktaStyrdokument.html
@@ -105,7 +105,7 @@ Alla dessa tillgångar utgör en stiftelseliknande egendom som äger sig själv 
 </div>
 
 </div>
-
+<my-footer></my-footer>
   
   <!-- </span><span  class="ei108_76_2_169">Vision</span><span  class="ei108_76_2_170">Vi har en</span></div> -->
   
