--- a/QA.html
+++ b/QA.html
@@ -47,6 +47,8 @@
          <h4>Vilka projekt ska ni bedriva?</h4>
       </div>
      </div>
+     <my-footer></my-footer>
+
     </body>
 </html>
 
