--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,8 @@
-<div class="footer">
-   <p> &#169; gemensamhetsskogen.se</p>
-   <p> gemensamhetsskogen@gmail.com</p>
- 
-</div>
+
+<div class="grid-container">
+   <div class="footer">
+   <p class="footerp"> &#169; gemensamhetsskogen.se <br>
+    gemensamhetsskogen@gmail.com</p>
+   </div>
+ </div>
+   
