--- a/initiativ.html
+++ b/initiativ.html
@@ -144,8 +144,20 @@
     <img   class="fotoram" width="100%" src="images/gänget.JPG" alt="Initiativstagare i naturen">
      
 </div>
-</div>
+<div></div>
+<div></div>
 
+</div>
+ <div class="grid-container">
+    <div class="footer">
+    <p class="footerp"> &#169; gemensamhetsskogen.se <br>
+     gemensamhetsskogen@gmail.com</p>
+    </div>
+  </div>
+    
+
+
+ 
 </div>
   
   <!-- </span><span  class="ei108_76_2_169">Vision</span><span  class="ei108_76_2_170">Vi har en</span></div> -->
