--- a/iMedia.html
+++ b/iMedia.html
@@ -66,7 +66,9 @@
         <a href="https://skaraborgsbygden.se/nyheter/vallebor-vill-skapa-gemensamhetsskog/"><img src="images/tidning.jpg" alt=""></a>
         
     </div>
+
     </div>  
+<my-footer></my-footer>
   
  
     
