Update Aktuellt, footer, css

--- a/aktuellt.html
+++ b/aktuellt.html
@@ -63,7 +63,15 @@
         
       </p> <p> Hemsidan är snart klar. Vi diskuterade vår rubrik och namn på hemsidan - om vi ska heta "Gemensamhetsskogen Billingen" eller "Gemensamhetsskogen Skaraborg" </p>
     </div>
-   
+    <div class="rubrik">
+      Inlämning av underskrift
+
+    </div>
+    <div class="empty"></div>
+    <div gridLeft>
+    <p> På tisdag den 14 september lämnade vi in underskriterna till Skara Stift. Eftersom vi inte fått svar på vår förfrågan att boka en tid för detta, så knackade vi på dörren, som svarades av en receptionist. Vi fick inte tag i någon från ledningen, men receptionisten fick vår namninsamling med 351 underskrifter och .pdf-lista från mittskifte.org samt våra kontaktuppgifter om de vill fortsätta dialogen med oss. Detta rapporterades på Skaraborgs Läns Tidning, länken till reportagen <a href="https://www.skaraborgslanstidning.se/artikel/over-300-underskrifter-overlamnades-till-skara-stift-nybildad-grupp-vill-stoppa-forsaljning-av-billingeskog"> länk här</a></p>
+    Vi har sedan skickat tackmejl till alla som angett sina mejladress. Man bestämt också att fortsätta med namninsamlingen, för att samla på oss stödjare till fotstatt arbetet.
+  </div>
   
 </div>
 
