--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,35 @@
+<link rel="stylesheet" href="styles.css">
 
-<div class="grid-container">
-   <div class="footer">
-   <p class="footerp"> &#169; gemensamhetsskogen.se <br>
-    gemensamhetsskogen@gmail.com</p>
-   </div>
- </div>
-   
+  <div class="grid-container " font-size="12px">
+    <div class="item1">
+      <p class="footerp"> &#169; <a href="index.html">gemensamhetsskogen.se</a> 
+        <br>
+       <a href="https://www.facebook.com/Gemensamhetsskogen-100424565724679" target="_blank"> <i class="fa fa-facebook-official" aria-hidden="true"></i></a> </p>
+  
+    </div>
+    <div class="item2"> 
+      <p class="footerp">
+      <b>Kontakt:</b> <br><a href="mailto:gemensamhetsskogen@gmail.com">gemensamhetsskogen@gmail.com</a>
+    <br>
+          <b>Sidansvarig:</b> <br> Sonia Lindblom - <a href="mailto:sonialindblom@gmail.com">sonialindblom@gmail.com</a></p>
+      
+  </div>
+  </div>
+
+<!-- 
+<div class="grid-container" font-size="12px">
+  <div class="item1">
+    <p class="footerp"> &#169; gemensamhetsskogen.se
+      <br>
+     <a href="https://www.facebook.com/Gemensamhetsskogen-100424565724679" target="_blank"> <i class="fa fa-facebook-official" aria-hidden="true"></i></a> </p>
+
+  </div>
+  <div class="item2"> 
+    <p class="footerp">
+    <b>Kontakt:</b> <br><a href="mailto:gemensamhetsskogen@gmail.com">gemensamhetsskogen@gmail.com</a></p>
+  <br>
+  <p class="footerp">
+    <b>Sidansvarig:</b> <br> Sonia Lindblom - <a href="mailto:sonialindblom@gmail.com">sonialindblom@gmail.com</a></p>
+    
+</div>
+</div> -->
