--- a/iMedia.html
+++ b/iMedia.html
@@ -65,7 +65,21 @@
       <div>
         <a href="https://skaraborgsbygden.se/nyheter/vallebor-vill-skapa-gemensamhetsskog/"><img src="images/tidning.jpg" alt=""></a>
         
-    </div>
+      </div>
+      <div class="rubrik">
+        <h2>Reportage på SkLT</h2>
+      </div>
+      <div></div>
+      <div >
+        Den 15 semptember rapporterades Inlämningen av underskriterna på Skaraborgs Läns Tidning <a href="https://www.skaraborgslanstidning.se/artikel/over-300-underskrifter-overlamnades-till-skara-stift-nybildad-grupp-vill-stoppa-forsaljning-av-billingeskog" target="_blank"> <i class="fa fa-external-link" aria-hidden="true"></i></a>. 
+      </div>
+      <div >
+        <figure>
+          <img src="images/SkLT20210915.JPG" alt="Skärmdump från Skaraborgs Läns Tidning">
+          <figcaption>Från SkLT:s hemsida</figcaption>
+        </figure>
+
+      </div>
 
     </div>  
 <my-footer></my-footer>
