--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
      
    
     </div>
+   <div style="width: 100%; height:550px; display: block;"><iframe src="//sv-se.eu.invajo.com/events/widget/id/84d0ded0-692c-11ef-92d4-c1c8f5a0d624" class="invajo-event-widget" id="invajo-event-widget_84d0ded0-692c-11ef-92d4-c1c8f5a0d624" frameborder="0" height="550px" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="yes" allowtransparency="true"></iframe><a href="https://invajo.com" style="display: none" title="Invajo">Invajo.com</a></div>
   
   </div>
   <my-footer></my-footer>
